--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
+    "swiper": "^6.4.8",
+    "vant": "^2.12.6",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
